Attempt to fix extra bottom white space

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@ html, body {
     height: 100%;
 }
 
+body {
+  padding-bottom: 20px;
+}
+
 .title {
   font-size: 65px;
   font-family: 'Inconsolata';
